# law-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  LICENSE  Makefile  README.md  chainlit.md  config.yaml  design.md  docker-compose.yml  draft.md  init-db.sh  init-db.sql  pg_db_doc.md  pyproject.toml  search.md  test_agent_e2e.py  test_search_e2e.py  test_simple_agent.py
.chainlit/: config.toml
.chainlit/translations/: fa-IR.json
.claude/skills/chainlit-ui-debugger/: README.md  SKILL.md  run.sh  test_chainlit_ui.py
.github/workflows/: ci.yml
best_practices/: agent.md  eval.md
docs/: DEV_WORKFLOW.md  README.md  UI_FONT_UPDATE.md  first_version.md  fix-progress.md
docs/architecture/: design.md
docs/architecture/migration/: README.md  migrate.py  schema.sql
docs/development/: tasks.md  v0.0.2-tasks.md  workflow.md
docs/features/agent-core/: plan.md
docs/features/configuration/: plan.md  progress.md
docs/features/conversation-sidebar/: progress.md
docs/features/database-connection/: plan.md  progress.md
docs/features/deployment/: DEPLOYMENT.md  progress.md
docs/features/env/: setup.md  understanding.md
docs/features/feedback/: plan.md  progress.md
docs/features/llm-provider-metisai/: plan.md  progress.md
docs/features/login/: plan.md  progress.md
docs/features/login-rate-limit/: plan.md  progress.md
docs/features/migration/: migrated_db.md  migration-test-results.md  migration-understanding.md
docs/features/observability/: plan.md  progress.md
docs/features/phase-11-enhanced-ui/: plan.md  progress.md
docs/features/phase-3-search-tools/: plan.md
docs/features/phase-4-agent-core/: progress.md
docs/features/phase-5-ui/: plan.md  progress.md
docs/features/phase-6-observability/: plan.md
docs/maintainer/: deployment.md  gc.md  learning.md
migration/: add_performance_indexes.sql
public/: patch.css  patch.js  style.css
scripts/: load_test_data.py  load_test_data.sql
src/law_agent/: __init__.py  cache.py  health.py  response_cache.py
src/law_assistant/: health.py
src/prompts/: system_prompt.yaml
tests/: conftest.py  test_config.py  test_database.py  test_logging.py
tests/integration/: test_search_tools_integration.py
tests/load/: __init__.py  locustfile.py  run_load_tests.py
tests/ui/: test_citations.py  test_retry_action.py  test_rtl.py  test_share_thread.py  test_streaming.py  test_ui_integration.py
tests/unit/: test_cache.py  test_data_layer.py  test_performance.py  test_rate_limit.py  test_search_tools.py
(+110 files in other folders)
